--- a/styles/style.css
+++ b/styles/style.css
@@ -4,11 +4,15 @@
   min-height: 100vh;
   background-size: cover;
   background-position: center;
-  background-image: url("https://wallpapercave.com/wp/wp8773104.jpg");
+  background-image: url("https://wallpaperaccess.com/full/4043532.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   display: flex;
   flex-direction: column;
+}
+
+.main {
+  padding: 25px 0 0 0;
 }
 
 .container {
@@ -44,17 +48,14 @@
   color: #fff;
   user-select: none;
   cursor: pointer;
+  text-decoration: none;
 }
 
-.menu__checkbox {
-  margin: 0;
-}
-.menu__checkbox:checked ~ .menu__checkbox__body {
-  display: block;
-}
-.menu__label {
+.menu__burger {
   display: block;
   cursor: pointer;
+  z-index: 5;
+  position: relative;
   margin: -10px 10px 0 0;
 }
 .menu__icon {
@@ -91,6 +92,7 @@
 .menu__list {
   display: flex;
   align-items: center;
+  margin-top: 15px;
 }
 @media (max-width: 768px) {
   .menu__list {
@@ -135,8 +137,12 @@
   transform-origin: left;
   transform: scaleX(1);
 }
+.menu__login {
+  text-decoration: none;
+}
 
 .login-button {
+  display: block;
   width: 130px;
   height: 50px;
   background: transparent;
@@ -171,7 +177,7 @@
   padding: 30px;
   border: 1px solid #fff;
   border-radius: 9px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .standart-form__title {
@@ -197,6 +203,16 @@
   outline: none;
   border-color: #007bff;
 }
+.standart-form__link {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  margin: 10px 0 0 0;
+  transition: 0.5s;
+}
+.standart-form__link:hover {
+  color: #808080;
+}
 .standart-form__button {
   margin-top: 20px;
   padding: 10px;
@@ -211,8 +227,6 @@
 
 .article-list {
   list-style: none;
-  margin: 50px 0 0 0;
-  padding: 0;
 }
 
 .article {
@@ -222,7 +236,7 @@
   padding: 30px;
   border: 1px solid #fff;
   border-radius: 9px;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .article__item {
@@ -252,6 +266,57 @@
   font-weight: bold;
   border-bottom: 2px solid #fff;
   text-decoration: none;
+}
+
+.user-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0 0 20px 0;
+}
+.user-list__item {
+  width: 33.33%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+@media (max-width: 768px) {
+  .user-list__item {
+    min-width: 100%;
+  }
+}
+
+.user {
+  border: 1px solid #fff;
+  border-radius: 9px;
+  background-color: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+}
+.user__role {
+  color: #fff;
+}
+.user__nickname {
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.footer__container {
+  border: 1px solid #fff;
+  border-radius: 9px 9px 0 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 30px 30px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .footer__container {
+    border-radius: 0;
+  }
+}
+.footer__rights {
+  font-size: 14px;
+  color: #999;
 }
 
 /*# sourceMappingURL=style.css.map */
